fixes not active mobile menu clipping the area underneath it making it non reachable

--- a/wp-content/themes/classy/sass/_layout.scss
+++ b/wp-content/themes/classy/sass/_layout.scss
@@ -266,17 +266,18 @@ header.header {
     width: 100%;
     z-index: 5;
     //overflow: hidden;
-    padding: 20px;
+    //padding: 20px;
     max-height: 68px;
     transition: 0.3s ease;
     box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.07);
+    padding-top: 0;
 
     .container {
       max-height: inherit;
       flex-direction: column;
       justify-content: flex-start;
       align-items: flex-start;
-      padding: 0;
+      padding: 20px;
 
       .header__right {
         width: 100%;
@@ -291,6 +292,8 @@ header.header {
       .header__menu {
         max-height: inherit;
         padding-top: 20px;
+        pointer-events: none;
+
 
         .menu__nav {
           flex-direction: column;
@@ -320,8 +323,9 @@ header.header {
         .hamburger {
           display: block;
           position: absolute;
-          top: 2px;
-          right: 0;
+          top: 22px;
+          right: 20px;
+          pointer-events: all;
         }
       }
 
@@ -348,6 +352,8 @@ header.header {
         }
 
         .header__menu {
+
+          pointer-events: all;
 
           .menu__nav {
             align-items: flex-start;
